# problem2

./: LICENSE  README.md  package.xml  setup.py
.github/workflows/: test.yml  test_humidity.yml
LastUpdated/: pub_node.py
mypkg/: package.xml  setup.py
mypkg/mypkg/: humidity.py
mypkg/test/: test_humidity.bash
test/: test.bash
test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/log/: latest_build
